package tareasEmpleados;

public class Desarrollador extends Empleado{
    @Override
    public void realizarTarea(){
        System.out.println("Escribiendo código y solucionando bugs");

    }
}
