package tareasEmpleados;

public class Disenyador extends Empleado{
    @Override
    public void realizarTarea(){
        System.out.println("Creando diseños gráficos y prototipos");
    }
}
