package tareasEmpleados;

public class Empleado {

    public Empleado(){

    }

    public void realizarTarea(){
        System.out.println("Empleado realizando una tarea genérica");
    }
}
